new file detail.html

--- a/index.html
+++ b/index.html
@@ -9,17 +9,27 @@
     <link rel="stylesheet" href="css/page.css"/>
 </head>
 <body>
+<header class="index-header">
+    <a class="menuButton" href="menu.html"></a>
+    精选
+    <a class="searchButton" href="#"></a>
+</header>
 <section class="index-sec1">
     <div class="index-sec1-imgContainer">
         <img src="res/4ecbfaef_original.jpg" alt=""/>
+        <div class="index-sec1-imgContainer-desc">巴黎<div class="index-sec1-imgContainer-subDesc">热门目的地</div></div>
     </div>
     <div class="index-sec1-imgContainer">
         <img src="res/fd6a381d_original.jpg" alt=""/>
+        <div class="index-sec1-imgContainer-desc">巴黎<div class="index-sec1-imgContainer-subDesc">热门目的地</div></div>
     </div>
 </section>
 <section class="index-sec2">
     <div class="index-sec2-imgContainer">
         <img src="res/50cddf61_original.jpg" alt=""/>
+        <div class="priceContainer">
+            <sup>￥</sup><span class="price">850</span>
+        </div>
         <div class="index-sec2-imgContainer-desc">
             Times Square Designr Townhouse Loft<br/>
             整套房子/公寓·22条评价·地图:纽约时代广场/剧院区
@@ -30,6 +40,9 @@
     </div>
     <div class="index-sec2-imgContainer">
         <img src="res/115237e4_original.jpg" alt=""/>
+        <div class="priceContainer">
+            <sup>￥</sup><span class="price">850</span>
+        </div>
 
         <div class="index-sec2-imgContainer-desc">
             Times Square Designr Townhouse Loft<br/>
