--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
     <ul class="menu-list">
         <li><a href="#">旅行</a></li>
         <li><a href="#">搜索</a></li>
-        <li><a href="#">精选</a></li>
+        <li><a href="index.html">精选</a></li>
         <li><a href="#">您的旅程</a></li>
         <li><a href="#">心愿单</a></li>
         <li><a href="#">收件箱</a></li>
