--- a/detail.html
+++ b/detail.html
@@ -37,34 +37,51 @@
         【肉球面包】大阪新阪急Hotel地下1层的BLUEJEAN店贩卖的软乎乎的肉球面包，想咬一口呢…
     </div>
     <div class="storeInfoButton">店铺信息</div>
+    <table class="tbl_common">
+        <colgroup>
+            <col width="70"/>
+        </colgroup>
+        <tr>
+            <td><span class="importantTag">店铺名</span></td>
+            <td>喫茶ブルージ</td>
+        </tr>
+        <tr>
+            <td><span class="importantTag">住址</span></td>
+            <td>大阪府大阪市北区芝田1-1-3 阪急三番街 B1F</td>
+        </tr>
+    </table>
     <div class="storeInfoContainer">
-        <table class="tbl_common">
-            <colgroup>
-                <col width="70"/>
-            </colgroup>
-            <tr>
-                <td><span class="importantTag">店铺名</span></td>
-                <td>喫茶ブルージ</td>
-            </tr>
-            <tr>
-                <td><span class="importantTag">住址</span></td>
-                <td>大阪府大阪市北区芝田1-1-3 阪急三番街 B1F</td>
-            </tr>
-        </table>
-        <div class="collectionContainer">
-            <img src="res/T19GVfFQ4bXXXXXXXX_!!0-item_pic.jpg" alt="" height="80"/>
-            <span class="collectionNum">233</span>
+        <img src="res/20140907001901.bmp" alt=""/>
+    </div>
+    <div class="collectionContainer">
+        <img src="res/T19GVfFQ4bXXXXXXXX_!!0-item_pic.jpg" alt="" height="80"/>
+        <span class="collectionNum">233</span>
+    </div>
+    <div class="commentContainer">
+        <div class="commentContainer-header">
+            <span class="importantTag" style="padding:8px 35px;font-size: 16px;margin-left: -10px;">相关内容</span>
+            <span style="font-weight: bold;font-size: 20px;margin-left: 10px;">55</span>
         </div>
-        <div class="commentContainer">
-            <div class="commentContainer-header">
-                <span class="importantTag" style="padding:8px 35px;font-size: 16px;margin-left: -10px;">评论</span>
-                <span style="font-weight: bold;font-size: 20px;margin-left: 10px;">55</span>
-            </div>
-            <ul class="commentUser">
-                <li><div class="photo-round small-photo"><img src="res/original.jpg" alt=""/></div></li>
-                <li><div class="photo-round small-photo"><img src="res/original.jpg" alt=""/></div></li>
-            </ul>
+        <ul class="commentUser">
+            <li><div class="photo-round small-photo"><img src="res/original.jpg" alt=""/></div></li>
+            <li><div class="photo-round small-photo"><img src="res/original.jpg" alt=""/></div></li>
+        </ul>
+        <div class="commentContainer-header">
+            <span class="importantTag" style="padding:8px 35px;font-size: 16px;margin-left: -10px;">去过这里的人</span>
+            <span style="font-weight: bold;font-size: 20px;margin-left: 10px;">55</span>
         </div>
+        <ul class="commentUser">
+            <li><div class="photo-round small-photo"><img src="res/original.jpg" alt=""/></div></li>
+            <li><div class="photo-round small-photo"><img src="res/original.jpg" alt=""/></div></li>
+        </ul>
+        <div class="commentContainer-header">
+            <span class="importantTag" style="padding:8px 35px;font-size: 16px;margin-left: -10px;">评论</span>
+            <span style="font-weight: bold;font-size: 20px;margin-left: 10px;">55</span>
+        </div>
+        <ul class="commentUser">
+            <li><div class="photo-round small-photo"><img src="res/original.jpg" alt=""/></div></li>
+            <li><div class="photo-round small-photo"><img src="res/original.jpg" alt=""/></div></li>
+        </ul>
     </div>
     <div style="clear:both;"></div>
 </section>
